<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="user_id">User Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_name">User Name</string>
    <string name="user_age">User Age</string>
    <string name="city">City</string>
    <string name="filter">filter</string>
    <string name="sort_name">Sort Name</string>
    <string name="sort_city">Sort City</string>
    <string name="sort_age">Sort Age</string>
    <string name="user_details">User Details</string>
</resources>