<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        android:padding="4dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_details"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="28sp"/>

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:padding="4dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/userAge"
                android:text="@string/user_age"
                android:textSize="24sp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/city"
                android:text="@string/city"
                android:textSize="24sp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>



    </androidx.cardview.widget.CardView>


</LinearLayout>